--- a/manb/setup.cfg
+++ b/manb/setup.cfg
@@ -22,6 +22,8 @@ python_requires = >=3.6
 install_requires =
     plantuml
     requests
+    ipywidgets
+    pandas
 
 [options.packages.find]
 where = src
